java: add section on gc